Modify layout to prevent subject is wrapped

--- a/root/src/ttsite.css
+++ b/root/src/ttsite.css
@@ -86,7 +86,7 @@ h1 {
 
 h2 {
     font-size: 2.2em;
-    margin-top: 4px;
+    margin-top: 30px;
     margin-bottom: 0;
 }
 
